--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-version=7.52.0-SNAPSHOT
-lastVersion=7.51.0
+version=7.52.0
+lastVersion=7.52.0
 
 githubRepositoryOwner=unblu
 githubRepositoryName=openapi
