--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-version=8.9.2-SNAPSHOT
-lastVersion=8.8.2
+version=8.9.2
+lastVersion=8.9.2
 
 githubRepositoryOwner=unblu
 githubRepositoryName=openapi
