[Gradle Release Plugin] - pre tag commit:  '7.52.2'.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-version=7.52.2-SNAPSHOT
-lastVersion=7.52.0
+version=7.52.2
+lastVersion=7.52.2
 
 githubRepositoryOwner=unblu
 githubRepositoryName=openapi
