--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-version=8.10.1-SNAPSHOT
-lastVersion=8.9.2
+version=8.10.1
+lastVersion=8.10.1
 
 githubRepositoryOwner=unblu
 githubRepositoryName=openapi
