[Gradle Release Plugin] - pre tag commit:  '7.53.0'.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-version=7.53.0-SNAPSHOT
-lastVersion=7.52.2
+version=7.53.0
+lastVersion=7.53.0
 
 githubRepositoryOwner=unblu
 githubRepositoryName=openapi
