--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-version=7.53.2-SNAPSHOT
-lastVersion=7.53.0
+version=7.53.2
+lastVersion=7.53.2
 
 githubRepositoryOwner=unblu
 githubRepositoryName=openapi
