--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-version=7.53.4-SNAPSHOT
-lastVersion=7.53.2
+version=7.53.4
+lastVersion=7.53.4
 
 githubRepositoryOwner=unblu
 githubRepositoryName=openapi
