--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-version=8.13.1-SNAPSHOT
-lastVersion=8.12.1
+version=8.13.1
+lastVersion=8.13.1
 
 githubRepositoryOwner=unblu
 githubRepositoryName=openapi
