[Gradle Release Plugin] - pre tag commit:  '7.54.1'.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-version=7.54.1-SNAPSHOT
-lastVersion=7.53.4
+version=7.54.1
+lastVersion=7.54.1
 
 githubRepositoryOwner=unblu
 githubRepositoryName=openapi
