--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-version=8.14.4-SNAPSHOT
-lastVersion=8.13.1
+version=8.14.4
+lastVersion=8.14.4
 
 githubRepositoryOwner=unblu
 githubRepositoryName=openapi
