[Gradle Release Plugin] - pre tag commit:  '7.55.0'.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-version=7.55.0-SNAPSHOT
-lastVersion=7.54.1
+version=7.55.0
+lastVersion=7.55.0
 
 githubRepositoryOwner=unblu
 githubRepositoryName=openapi
